fix: hero full-width background, footer subscribe alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,11 @@ ul {
   background-size: cover;
   background-color: #2e2f42;
 }
+.media .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 @media screen and (min-resolution: 192dpi) {
   .media {
     background-image:
@@ -776,6 +781,9 @@ ul {
   }
   .footer-container-social {
     margin-right: 80px;
+  }
+  .footer-container-subscribe {
+    margin-left: auto;
   }
 }
 
